# globalign

./: .gitignore  .nojekyll  README.md  _quarto.yml  env.yml  global_align.ipynb  global_align.py  pyproject.toml  robots.txt  search.json  sitemap.xml
notebooks/: demo.ipynb
reference/: conclude.html  conclude.qmd  cosmo.scss  globaligner.html  globaligner.qmd  index.html  index.qmd  start.html  start.qmd  tutorial.html  tutorial.qmd
reference/docs/: conclude.html  globaligner.html  index.html  start.html
site_libs/bootstrap/: bootstrap-04ef7e0082e253fb32496969bfb130b1.min.css
src/globalign/: __about__.py  conclude.py  demo.ipynb  globalign.py  globaligner.py  setup.py  start.py
tests/: globalign_test.py  globaligner_test.py  setup_test.py
